mudado formato de iniciar a aplicação para usar o  nodemon

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build:
       context: .
-    command: node load-cpu.js
+    command: nodemon
     ports: 
      - 3000:3000
     volumes:
